# trg_homework

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  config.py  conftest.py  pyproject.toml  pytest.ini
helpers/: random_data.py
pages/locators/: life_at_trg_locators.py
pages/page_objects/: life_at_trg_page.py
tests/: test_life_at_trg.py
